refactor(security): clean up user persistence code